the browser can access the js file now

--- a/app/views/login.pug
+++ b/app/views/login.pug
@@ -1,6 +1,3 @@
-doctype html
-html(lang="en")
-    head
-    title = pageTitle
-    body
-        h1 Pug - node template engine
+extends layout
+block content
+    h1 Pug - node template engine
