the browser can access bootstrap now

--- a/app/views/assets.pug
+++ b/app/views/assets.pug
@@ -1,2 +1,4 @@
-//link(rel='stylesheet' href='#{assets}/css/bootstrap.css')
-//script(src='#{assets}/js/jquery.js')
+link(rel='stylesheet' href=assets+'/css/bootstrap.css')
+script(src=assets+'/js/jquery.js')
+script(src=assets+'/js/tether.js')
+script(src=assets+'/js/bootstrap.js')
