--- a/app/views/layout.pug
+++ b/app/views/layout.pug
@@ -2,5 +2,5 @@ doctype html
 include head
 body
     input(type='hidden' id="pageName" value='#{pageName}')
-    //include navBar
+    include navBar
     block content
