downgrade the version of bootstrap, and finish the nav bar

--- a/app/views/navBar.pug
+++ b/app/views/navBar.pug
@@ -1,9 +1,10 @@
 nav.navbar.navbar-default(role='navigation')
     .container-fluid
         .navbar-header
-            a.navbar-brand(href='#') YY
-    .collapse.navbar-collapse
-        ul.nav.navbar-nav
-            li.active(href='#') IOS
-            li Android
-
+            a.navbar-brand(href='#') LOGO
+        div
+            ul.nav.navbar-nav
+                li.active
+                    a(href='#') 基金定投分析
+                li
+                    a(href='#') 期待更多
