refactor to mvc

--- a/app/views/layout.pug
+++ b/app/views/layout.pug
@@ -1,6 +1,6 @@
 doctype html
 include head
 body
-    input(type='hidden' id="pageName" value='#{pageName}')
+    input(type='hidden' id="pageName" value=pageName)
     include navBar
     block content
