--- a/app/views/assets.pug
+++ b/app/views/assets.pug
@@ -1,3 +1,4 @@
 link(rel='stylesheet' href=assets+'/css/bootstrap.css')
 script(src=assets+'/js/jquery.js')
 script(src=assets+'/js/bootstrap.js')
+script(src=assets+'/js/fund.js')
