--- a/app/views/fund.pug
+++ b/app/views/fund.pug
@@ -2,9 +2,9 @@ extends layout
 block content
     .container
         .row
-            .col-md-2
+            .col-md-2#fund-id-list
                 each fundId in fundIds
-                    a.list-group-item(href="#") #{fundId}
+                    .list-group-item #{fundId}
                 //<a href="#" class="list-group-item active">免费域名注册</a>
                 //<a href="#" class="list-group-item">24*7 支持</a>
             .col-md-10
