--- a/app/views/assets.pug
+++ b/app/views/assets.pug
@@ -1,4 +1,5 @@
 link(rel='stylesheet' href=assets+'/css/bootstrap.css')
+link(rel='stylesheet' href=assets+'/css/fund.css')
 script(src=assets+'/js/jquery.js')
 script(src=assets+'/js/bootstrap.js')
 script(src=assets+'/js/fund.js')
