--- a/app/views/fund.pug
+++ b/app/views/fund.pug
@@ -5,7 +5,7 @@ block content
             .col-md-2#fund-id-list
                 each fundId in fundIds
                     .list-group-item #{fundId}
-                //<a href="#" class="list-group-item active">免费域名注册</a>
-                //<a href="#" class="list-group-item">24*7 支持</a>
             .col-md-10
-                .dd yyyy
+                #unitPriceCompare
+                #profitRateCompare
+                #profitRatePerYearCompare
