--- a/app/views/assets.pug
+++ b/app/views/assets.pug
@@ -2,4 +2,6 @@ link(rel='stylesheet' href=assets+'/css/bootstrap.css')
 link(rel='stylesheet' href=assets+'/css/fund.css')
 script(src=assets+'/js/jquery.js')
 script(src=assets+'/js/bootstrap.js')
+script(src=assets+'/js/underscore.js')
 script(src=assets+'/js/fund.js')
+script(src='https://cdnjs.cloudflare.com/ajax/libs/echarts/3.2.3/echarts.min.js')
