--- a/app/views/fund.pug
+++ b/app/views/fund.pug
@@ -6,6 +6,6 @@ block content
                 each fundId in fundIds
                     .list-group-item #{fundId}
             .col-md-10
-                #unitPriceCompare
+                #priceCompare
                 #profitRateCompare
                 #profitRatePerYearCompare
