--- a/static-assets/src/styl/fund.styl
+++ b/static-assets/src/styl/fund.styl
@@ -4,3 +4,13 @@
   height 230px
 #profitRatePerYearCompare
   height 230px
+#overview
+  .label
+    display inline-block
+    color black
+  .content
+    display inline-block
+  .green
+    color green;
+  .red
+    color red;
