--- a/app/views/fund.pug
+++ b/app/views/fund.pug
@@ -6,6 +6,22 @@ block content
                 each fundId in fundIds
                     .list-group-item #{fundId}
             .col-md-10
+                #overview
+                    .row
+                        .col-md-4
+                            .row
+                                div.label 总成本
+                                #totalCost.content
+                            .row
+                                div.label 总净值
+                                #currentPrice.content
+                        .col-md-4
+                            .row
+                                div.label 当前收益
+                                #profitRate.content
+                            .row
+                                div.label 年化收益
+                                #profitRatePerYear.content
                 #priceCompare
                 #profitRateCompare
                 #profitRatePerYearCompare
