change the echart cdn url. add the real time info of fund.

--- a/app/views/assets.pug
+++ b/app/views/assets.pug
@@ -4,4 +4,4 @@ script(src=assets+'/js/jquery.js')
 script(src=assets+'/js/bootstrap.js')
 script(src=assets+'/js/underscore.js')
 script(src=assets+'/js/fund.js')
-script(src='https://cdnjs.cloudflare.com/ajax/libs/echarts/3.2.3/echarts.min.js')
+script(src='http://cdn.bootcss.com/echarts/3.2.3/echarts.common.min.js')
