--- a/static-assets/src/styl/fund.styl
+++ b/static-assets/src/styl/fund.styl
@@ -11,6 +11,8 @@
   .content
     display inline-block
   .green
-    color green;
+    color green
   .red
-    color red;
+    color red
+  .hide
+    display none
