--- a/app/views/navBar.pug
+++ b/app/views/navBar.pug
@@ -1,10 +1,10 @@
 nav.navbar.navbar-default(role='navigation')
     .container-fluid
         .navbar-header
-            a.navbar-brand(href='#') LOGO
+            a.navbar-brand(href='index') LOGO
         div
             ul.nav.navbar-nav
                 li.active
-                    a(href='#') 基金定投分析
+                    a(href='fund') 基金定投分析
                 li
                     a(href='#') 期待更多
