修改：取URL的值得参数从attr中取，不从innerHTML中取

--- a/app/views/fund.pug
+++ b/app/views/fund.pug
@@ -4,7 +4,8 @@ block content
         .row
             .col-md-2#fund-id-list
                 each fundId in fundIds
-                    .list-group-item #{fundId}
+                    .list-group-item(value=fundId) #{fundId}
+                        //span.label.label-success Success
             .col-md-10
                 #overview
                     .row
