增加资产分布页，实现top nav bar的高亮

--- a/app/views/navBar.pug
+++ b/app/views/navBar.pug
@@ -5,7 +5,9 @@
                 a.navbar-brand(href='index') LOGO
             div
                 ul.nav.navbar-nav
-                    li.active
-                        a(href='fund') 基金定投分析
+                    li
+                        a(href='wealth' name='wealth') 资产分布
+                    li
+                        a(href='fund' name='fund') 基金定投分析
                     li
                         a(href='#') 期待更多
