--- a/app/views/assets.pug
+++ b/app/views/assets.pug
@@ -3,5 +3,6 @@ link(rel='stylesheet' href=assets+'/css/fund.css')
 script(src=assets+'/js/jquery.js')
 script(src=assets+'/js/bootstrap.js')
 script(src=assets+'/js/underscore.js')
-script(src=assets+'/js/fund.js')
 script(src='http://cdn.bootcss.com/echarts/3.2.3/echarts.common.min.js')
+script(src=assets+'/js/navBar.js')
+script(src=assets+'/js/fund.js')
