--- a/app/views/assets.pug
+++ b/app/views/assets.pug
@@ -1,8 +1,10 @@
 link(rel='stylesheet' href=assets+'/css/bootstrap.css')
 link(rel='stylesheet' href=assets+'/css/fund.css')
+link(rel='stylesheet' href=assets+'/css/wealth.css')
 script(src=assets+'/js/jquery.js')
 script(src=assets+'/js/bootstrap.js')
 script(src=assets+'/js/underscore.js')
 script(src='http://cdn.bootcss.com/echarts/3.2.3/echarts.common.min.js')
 script(src=assets+'/js/navBar.js')
 script(src=assets+'/js/fund.js')
+script(src=assets+'/js/wealth.js')
