--- a/app/views/wealth.pug
+++ b/app/views/wealth.pug
@@ -2,4 +2,5 @@ extends layout
 block content
     .container
         .row
-            .col-md-2
+            .col-md-12
+                #wealthDistribution
