增加资产分布饼图

--- a/app/views/wealth.pug
+++ b/app/views/wealth.pug
@@ -4,3 +4,6 @@ block content
         .row
             .col-md-12
                 #wealthDistribution
+        .row
+            .col-md-6
+                #currentDistributionPie
