--- a/app/views/assets.pug
+++ b/app/views/assets.pug
@@ -4,7 +4,8 @@ link(rel='stylesheet' href=assets+'/css/wealth.css')
 script(src=assets+'/js/jquery.js')
 script(src=assets+'/js/bootstrap.js')
 script(src=assets+'/js/underscore.js')
-script(src='http://cdn.bootcss.com/echarts/3.2.3/echarts.common.min.js')
+script(src=assets+'/js/echarts-3.3.2/echarts.min.js')
+script(src=assets+'/js/echarts-3.3.2/shine.js')
 script(src=assets+'/js/navBar.js')
 script(src=assets+'/js/fund.js')
 script(src=assets+'/js/wealth.js')
