--- a/app/views/navBar.pug
+++ b/app/views/navBar.pug
@@ -1,4 +1,4 @@
-.container
+.container-fluid
     nav.navbar.navbar-default(role='navigation')
         .container-fluid
             .navbar-header
