--- a/app/views/wealth.pug
+++ b/app/views/wealth.pug
@@ -1,6 +1,6 @@
 extends layout
 block content
-    .container
+    .container-fluid
         .row
             .col-md-12
                 #wealthDistribution
