--- a/static-assets/src/styl/fund.styl
+++ b/static-assets/src/styl/fund.styl
@@ -16,3 +16,26 @@
     color red
   .hide
     display none
+#purchaseInfoModal
+  .modal-dialog
+    margin 70px 0 0 350px
+    .modal-content
+      width 750px
+      .modal-body
+        height 150px
+        .item
+          text-align center
+          float left
+          border dashed
+          margin 15px
+          width 120px
+          .title
+            font-size 20px
+          .data
+            font-size 20px
+        .separator
+          text-align center
+          float left
+          font-size 20px
+          font-weight 700
+          margin 30px 5px 0 5px
