修改虚线框样式

--- a/static-assets/src/styl/fund.styl
+++ b/static-assets/src/styl/fund.styl
@@ -26,7 +26,7 @@
         .item
           text-align center
           float left
-          border dashed
+          border dashed #bbbbbb
           margin 15px
           width 120px
           .title
