--- a/app/views/head.pug
+++ b/app/views/head.pug
@@ -3,4 +3,4 @@ head
     meta(name="description" content="")
     meta(name="keywords" content="")
     title #{pageTitle}
-    include ./assets
+    include ./assets-css
