--- a/app/views/assets-js.pug
+++ b/app/views/assets-js.pug
@@ -1,7 +1,7 @@
-script(src=assets+'/js/jquery.js')
+script(src='http://cdn.bootcss.com/jquery/3.2.1/jquery.min.js')
 script(src=assets+'/js/bootstrap.js')
 script(src=assets+'/js/underscore.js')
-script(src=assets+'/js/echarts-3.5.1/echarts.min.js')
+script(src='http://cdn.bootcss.com/echarts/3.5.4/echarts.min.js')
 script(src=assets+'/js/echarts-3.5.1/shine.js')
 script(src=assets+'/js/navBar.js')
 script(src=assets+'/js/fund.js')
