--- a/app/views/assets-css.pug
+++ b/app/views/assets-css.pug
@@ -1,3 +1,3 @@
-link(rel='stylesheet' href=assets+'/css/bootstrap.css')
+link(rel='stylesheet' href='http://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css')
 link(rel='stylesheet' href=assets+'/css/fund.css')
 link(rel='stylesheet' href=assets+'/css/wealth.css')
