--- a/app/views/assets-js.pug
+++ b/app/views/assets-js.pug
@@ -1,6 +1,6 @@
 script(src='http://cdn.bootcss.com/jquery/3.2.1/jquery.min.js')
 script(src='http://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js')
-script(src=assets+'/js/underscore.js')
+script(src='http://cdn.bootcss.com/underscore.js/1.8.3/underscore-min.js')
 script(src='http://cdn.bootcss.com/echarts/3.5.4/echarts.min.js')
 script(src=assets+'/js/echarts-3.5.1/shine.js')
 script(src=assets+'/js/navBar.js')
