增加登录页

--- a/app/views/navBar.pug
+++ b/app/views/navBar.pug
@@ -10,4 +10,6 @@
                     li
                         a(href='fund' name='fund') 基金定投分析
                     li
+                        a(href='login' name='login') 切换用户
+                    li
                         a(href='#') 期待更多
