完成表格统计功能

--- a/app/views/assets-css.pug
+++ b/app/views/assets-css.pug
@@ -1,4 +1,5 @@
 link(rel='stylesheet' href='http://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css')
+link(rel='stylesheet' href='https://cdn.bootcss.com/datatables/1.10.16/css/jquery.dataTables.min.css')
 link(rel='stylesheet' href=assets+'/css/fund.css')
 link(rel='stylesheet' href=assets+'/css/wealth.css')
 link(rel='stylesheet' href=assets+'/css/login.css')
