完成表格统计功能

--- a/app/views/fundHistory.pug
+++ b/app/views/fundHistory.pug
@@ -12,10 +12,10 @@ block content
                 th 基金ID
                 th 交易策略
                 th 投资基数
-                th 总投入
-                th 总赎回
-                th 投资时长/天
-                th 盈利金额
+                th 总投入/元
+                th 总赎回/元
+                th 持有时长/天
+                th 盈利金额/元
                 th 收益率
                 th 年化收益率
         tbody
