--- a/app/views/navBar.pug
+++ b/app/views/navBar.pug
@@ -10,8 +10,8 @@
                     li
                         a(href='fund' name='fund') 基金定投分析
                     li
-                        a(href='fund-history' name='fund-history') 基金投资历史
-                    li
-                        a(href='login' name='login') 切换用户
+                        a(href='fundHistory' name='fundHistory') 基金投资历史
+                    //li
+                    //    a(href='login' name='login') 切换用户
                     li
                         a(href='#') 期待更多
