增加计算irr的页面

--- a/app/views/irr.pug
+++ b/app/views/irr.pug
@@ -8,18 +8,18 @@ body
     script(src=assets+'/js/irr.js')
 
     .container-fluid
-        .row(style="font-size:60px;")
+        .row(style="font-size:15px;")
             div
                 span() 贷款金额
-                input.corpus(style="width: 70%;font-size: 60px;")
+                input.corpus(style="width: 70%;font-size: 15px;")
             div
                 span 还款期数
-                input.terms-of-loan(style="width: 70%;font-size: 60px;")
+                input.terms-of-loan(style="width: 70%;font-size: 15px;")
             div
                 span 每月还款额
-                input.monthly-patment(style="width: 70%;font-size: 60px;")
+                input.monthly-patment(style="width: 70%;font-size: 15px;")
             div
-                button.calc(style="font-size: 60px;") 计算IRR
+                button.calc(style="background: #9999;font-size: 15px;") 计算IRR
             div
                 span 实际年化利率：
                 span.irr
