--- a/app/views/irr.pug
+++ b/app/views/irr.pug
@@ -2,6 +2,7 @@ head
     meta(charset="utf-8")
     meta(name="description" content="")
     meta(name="viewport" content="width=device-width,initial-scale=2.0")
+    title IRR计算器
 body
     input(type='hidden' id="pageName" value=pageName)
     script(src='http://cdn.bootcss.com/jquery/3.2.1/jquery.min.js')
